--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "scripts": {
-    "build": "yarn webpack"
+    "build": "yarn webpack",
+    "host": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
+    "start": "yarn webpack-dev-server --mode=development --config ./webpack.config.js"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^5.3.1",
-    "typescript": "^3.2.1",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.15.0",
+    "typescript": "^3.4.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
