--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
     "start": "yarn webpack-dev-server --mode=development --config ./webpack.config.js"
   },
   "dependencies": {
+    "svg.js": "^2.7.1",
+    "svgdom": "^0.0.18"
+  },
+  "devDependencies": {
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "source-map-loader": "^0.2.4",
+    "svg-inline-loader": "^0.8.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3",
