--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "yarn webpack",
-    "host": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
+    "host": "yarn webpack --watch",
     "start": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
     "express": "yarn build && node server.js"
   },
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
+    "nodemon-webpack-plugin": "^4.0.8",
     "svg.js": "^2.7.1",
     "svgdom": "^0.0.18"
   },
@@ -17,6 +18,7 @@
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "nodemon": "^1.18.11",
     "source-map-loader": "^0.2.4",
     "svg-inline-loader": "^0.8.0",
     "ts-loader": "^5.3.3",
