--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "scripts": {
     "build": "yarn webpack",
+    "buildServer": "typescript --src src/server --output dist",
     "host": "yarn webpack --watch",
     "start": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
+    "startParallel": "concurrently yarn startServerDev & startClientDev",
+    "startServerDev": "ts-node src/server/server.ts",
+    "startClientDev": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
+    "startServerLive": "node dist/server.js",
     "express": "yarn build && node server.js"
   },
   "dependencies": {
@@ -14,6 +19,8 @@
     "svgdom": "^0.0.18"
   },
   "devDependencies": {
+    "@types/node": "^11.13.7",
+    "@types/express": "^4.16.1",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -22,6 +29,7 @@
     "source-map-loader": "^0.2.4",
     "svg-inline-loader": "^0.8.0",
     "ts-loader": "^5.3.3",
+    "ts-node": "^8.1.0",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3",
     "webpack": "^4.29.6",
