--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "build": "yarn webpack",
-    "buildServer": "typescript --src src/server --output dist",
+    "build": "yarn webpack && yarn buildServer",
+    "buildServer": "tsc src/server/* --outDir dist",
     "host": "yarn webpack --watch",
     "start": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
-    "startParallel": "concurrently yarn startServerDev & startClientDev",
+    "start:dev": "concurrently yarn startServerDev & yarn startClientDev",
     "startServerDev": "ts-node src/server/server.ts",
     "startClientDev": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
     "startServerLive": "node dist/server.js",
@@ -19,8 +19,8 @@
     "svgdom": "^0.0.18"
   },
   "devDependencies": {
-    "@types/node": "^11.13.7",
     "@types/express": "^4.16.1",
+    "@types/node": "^11.13.7",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -31,7 +31,7 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^8.1.0",
     "tslint": "^5.15.0",
-    "typescript": "^3.4.3",
+    "typescript": "^3.4.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
