--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "startServerDev": "ts-node src/server/server.ts",
     "startClientDev": "yarn webpack-dev-server --mode=development --config ./webpack.config.js",
     "startServerLive": "node dist/server.js",
+    "live": "yarn build && yarn startServerLive",
     "express": "yarn build && node server.js"
   },
   "dependencies": {
+    "await-to-js": "^2.1.1",
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
