--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
+    "start": "NODE_ENV=production node dist/server.js",
+    "lint": "tslint --project tsconfig.json",
     "build": "yarn webpack && yarn buildServer",
     "buildServer": "tsc src/server/server.ts --esModuleInterop --outDir dist",
     "startDev": "concurrently 'yarn startServerDev' 'yarn startClientDev'",
     "startServerDev": "nodemon",
     "startClientDev": "yarn webpack --watch",
-    "startServerLive": "NODE_ENV=production node dist/server.js",
+    "startServerLive": "NODE_ENV=production node -r dotenv/config dist/server.js",
     "live": "yarn build && yarn startServerLive",
     "mongoDev": "mongod --config /usr/local/etc/mongod.conf"
   },
@@ -16,13 +18,17 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon-webpack-plugin": "^4.0.8",
     "svg.js": "^2.7.1",
     "svgdom": "^0.0.18"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^11.13.7",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
