--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "mongoDev": "mongod --config /usr/local/etc/mongod.conf"
   },
   "dependencies": {
+    "@types/express-jwt": "^0.0.42",
     "await-to-js": "^2.1.1",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "mongoose": "^5.5.4",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon-webpack-plugin": "^4.0.8",
     "svg.js": "^2.7.1",
     "svgdom": "^0.0.18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^11.13.7",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
