--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.1.1",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.16.1",
+    "express-sessions": "^1.0.6",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "mongoose": "^5.5.4",
@@ -26,7 +29,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/connect-mongodb-session": "^0.0.0",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.12",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^11.13.7",
