--- a/package.json
+++ b/package.json
@@ -16,19 +16,32 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.1.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.4",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon-webpack-plugin": "^4.0.8",
-    "preact": "^8.4.2"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "preact": "^8.4.2",
+    "preact-compat": "^3.18.5",
+    "preact-router": "^2.6.1",
+    "proptypes": "^1.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/connect-mongodb-session": "^0.0.0",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.12",
+    "@types/lodash": "^4.14.126",
     "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^11.13.7",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
