--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "svg-inline-loader": "^0.8.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.1.0",
+    "tsconfig-paths": "^3.8.0",
     "tslint": "^5.15.0",
     "typescript": "^3.4.5",
     "webpack": "^4.29.6",
