--- a/package.json
+++ b/package.json
@@ -40,14 +40,19 @@
     "@types/lodash": "^4.14.126",
     "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^11.13.7",
+    "@types/node-sass": "^4.11.0",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
+    "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.11",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.1.0",
