--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "scripts": {
     "start": "NODE_ENV=production node dist/server.js",
     "lint": "tslint --project tsconfig.json",
-    "build": "yarn webpack && yarn buildServer",
+    "build": "yarn webpack --mode production",
     "buildServer": "tsc src/server/server.ts --esModuleInterop --outDir dist",
     "startDev": "concurrently 'yarn startServerDev' 'yarn startClientDev'",
     "startServerDev": "nodemon",
     "startClientDev": "yarn webpack --watch",
     "startServerLive": "NODE_ENV=production node -r dotenv/config dist/server.js",
     "live": "yarn build && yarn startServerLive",
-    "mongoDev": "mongod --config /usr/local/etc/mongod.conf"
+    "mongoDev": "mongod --config /usr/local/etc/mongod.conf",
+    "analyze": "source-map-explorer /dist/client/assets/bundle.*"
   },
   "dependencies": {
     "await-to-js": "^2.1.1",
@@ -19,24 +20,26 @@
     "connect-mongodb-session": "^2.1.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
-    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
-    "lodash": "^4.17.11",
+    "lodash.clone": "^4.5.0",
+    "lodash.range": "^3.2.0",
+    "lodash.shuffle": "^4.2.0",
     "mongoose": "^5.5.4",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon-webpack-plugin": "^4.0.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "preact": "^8.4.2",
-    "preact-compat": "^3.18.5",
-    "preact-router": "^2.6.1"
+    "preact": "^10.0.0-rc.0",
+    "preact-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/connect-mongodb-session": "^0.0.0",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
-    "@types/lodash": "^4.14.126",
+    "@types/lodash.clone": "^4.5.6",
+    "@types/lodash.range": "^3.2.6",
+    "@types/lodash.shuffle": "^4.2.6",
     "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^11.13.7",
     "@types/node-sass": "^4.11.0",
