--- a/package.json
+++ b/package.json
@@ -1,68 +1,32 @@
 {
-  "scripts": {
-    "start": "NODE_ENV=production node dist/server.js",
-    "lint": "tslint --project tsconfig.json",
-    "build": "yarn webpack --mode production",
-    "buildServer": "tsc src/server/server.ts --esModuleInterop --outDir dist",
-    "startDev": "concurrently 'yarn startServerDev' 'yarn startClientDev'",
-    "startServerDev": "nodemon",
-    "startClientDev": "yarn webpack --watch",
-    "startServerLive": "NODE_ENV=production node -r dotenv/config dist/server.js",
-    "live": "yarn build && yarn startServerLive",
-    "mongoDev": "mongod --config /usr/local/etc/mongod.conf",
-    "analyze": "source-map-explorer /dist/client/assets/bundle.*"
-  },
+  "name": "jfdiplomacy-server",
+  "version": "1.0.0",
+  "main": "server.ts",
+  "license": "MIT",
   "dependencies": {
     "await-to-js": "^2.1.1",
-    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
-    "connect-mongodb-session": "^2.1.1",
-    "express": "^4.16.4",
-    "express-session": "^1.16.1",
-    "html-loader": "^1.1.0",
-    "lodash.clone": "^4.5.0",
-    "lodash.range": "^3.2.0",
+    "connect-mongodb-session": "^2.3.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "jfdiplomacy-shared": "../shared",
     "lodash.shuffle": "^4.2.0",
-    "mongoose": "^5.5.4",
+    "module-alias": "^2.2.2",
+    "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemon-webpack-plugin": "^4.0.8",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "preact": "^10.0.0-rc.0",
-    "preact-router": "^3.0.1"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/connect-mongodb-session": "^0.0.2",
-    "@types/express": "^4.16.1",
-    "@types/express-session": "^1.15.12",
-    "@types/lodash.clone": "^4.5.6",
-    "@types/lodash.range": "^3.2.6",
+    "@types/express": "^4.17.4",
+    "@types/express-session": "^1.17.0",
     "@types/lodash.shuffle": "^4.2.6",
-    "@types/mongoose-unique-validator": "^1.0.1",
+    "@types/mongoose-unique-validator": "^1.0.3",
     "@types/node": "^13.11.0",
-    "@types/node-sass": "^4.11.0",
-    "@types/passport": "^1.0.0",
-    "@types/passport-local": "^1.0.33",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.2",
-    "css-loader": "^3.0.0",
-    "html-webpack-plugin": "^4.0.4",
-    "http-server": "^0.12.1",
-    "node-sass": "^4.12.0",
-    "nodemon": "^2.0.2",
-    "sass-loader": "^8.0.2",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.1.3",
-    "svg-inline-loader": "^0.8.0",
-    "ts-loader": "^6.2.2",
-    "ts-node": "^8.1.0",
-    "tsconfig-paths": "^3.8.0",
-    "tslint": "^6.1.1",
-    "typescript": "^3.4.5",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "@types/passport": "^1.0.3",
+    "@types/passport-local": "^1.0.33"
   }
 }
