--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "main": "server.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "yarn build:server && yarn build:client",
+    "build:server": "babel src -d build --extensions .ts --ignore src/client",
+    "build:client": "cd ./src/client && yarn build",
+    "start": "node build/server.js"
+  },
   "dependencies": {
     "await-to-js": "^2.1.1",
     "bcrypt": "^4.0.1",
