--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node build/server.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
     "await-to-js": "^2.1.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
@@ -24,6 +25,11 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/bcrypt": "^3.0.0",
     "@types/connect-mongodb-session": "^0.0.2",
     "@types/express": "^4.17.4",
@@ -32,6 +38,7 @@
     "@types/mongoose-unique-validator": "^1.0.3",
     "@types/node": "^13.11.0",
     "@types/passport": "^1.0.3",
-    "@types/passport-local": "^1.0.33"
+    "@types/passport-local": "^1.0.33",
+    "babel-plugin-module-resolver": "^4.0.0"
   }
 }
