update build process

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.ts",
   "license": "MIT",
   "scripts": {
-    "build": "yarn build:server && yarn build:client",
+    "build": "yarn build:server",
+    "build:full": "yarn build:server && yarn build:client",
     "build:server": "yarn babel src -d build --extensions .ts --ignore src/client",
     "build:client": "cd ./src/client && yarn && yarn build",
     "start": "node build/server.js"
