--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "start": "NODE_ENV=production node dist/server.js",
     "lint": "tslint --project tsconfig.json",
-    "build": "yarn webpack --mode production",
+    "build": "yarn buildClient && yarn buildServer",
+    "buildClient": "yarn webpack --mode production",
     "buildServer": "tsc src/main.ts --esModuleInterop --outDir dist",
     "startDev": "concurrently 'yarn startServerDev' 'yarn startClientDev'",
     "startServerDev": "nodemon --exec babel-node src/main.ts --outDir dist",
