remove stop being a perfectionist tag

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "buildClient": "yarn webpack --mode production",
     "buildServer": "yarn babel src -d dist --extensions .ts --ignore src/client",
     "startDev": "concurrently 'yarn startServerDev' 'yarn startClientDev'",
-    "startServerDev": "nodemon --exec babel-node src/main.ts --outDir dist",
-    "startClientDev": "yarn webpack --watch",
+    "startServerDev": "nodemon --exec babel-node src/main.ts --extensions .ts --ignore src/client",
+    "startClientDev": "yarn webpack --watch --mode development",
     "startServerLive": "NODE_ENV=production node -r dotenv/config dist/server.js",
     "live": "yarn build && yarn startServerLive",
     "mongoDev": "mongod --config /usr/local/etc/mongod.conf",
