--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "es7"
     ],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
   },
   "exclude": [
     "**/*.ignore.ts"
