--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "preact": "^10.3.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -53,6 +54,7 @@
     "@types/node-sass": "^4.11.0",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
+    "@types/styled-components": "^5.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.2",
