--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "yarn buildClient && yarn buildServer",
     "buildClient": "yarn webpack --mode production",
     "buildServer": "yarn babel src -d dist --extensions .ts --ignore src/client",
-    "startDev": "concurrently 'yarn startServerDev' 'yarn startClientDev'",
+    "startDev": "NODE_ENV=development concurrently 'yarn startServerDev' 'yarn startClientDev'",
     "startServerDev": "nodemon --exec babel-node src/main.ts --extensions .ts --ignore src/client",
     "startClientDev": "yarn webpack --watch --mode development",
     "startServerLive": "NODE_ENV=production node -r dotenv/config dist/server.js",
@@ -15,18 +15,20 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2",
+    "@types/react": "^16.9.35",
     "await-to-js": "^2.1.1",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
-    "connect-mongodb-session": "^2.1.1",
+    "chalk": "^4.0.0",
+    "connect-mongodb-session": "^2.3.2",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "html-loader": "^1.1.0",
     "lodash.clone": "^4.5.0",
     "lodash.range": "^3.2.0",
     "lodash.shuffle": "^4.2.0",
-    "mongoose": "^5.5.4",
+    "mongoose": "^5.9.15",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon-webpack-plugin": "^4.0.8",
     "passport": "^0.4.0",
