--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-local": "^1.0.0",
     "preact": "^10.3.4",
     "preact-router": "^3.2.1",
+    "react-scroll": "^1.7.16",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "@types/node-sass": "^4.11.0",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
+    "@types/react-scroll": "^1.5.5",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
