--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "@types/styled-components": "^5.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^4.0.4",
     "node-sass": "^4.12.0",
     "nodemon": "^2.0.2",
+    "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
